--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🚀 Domain Test Site - It's Alive!</title>
-    <meta name="description" content="A delightfully interactive placeholder site for testing domains, hosting, and CDN setups." />
-    <meta property="og:title" content="🚀 Domain Test Site - It's Alive!" />
-    <meta property="og:description" content="Testing domain configuration with style and humor!" />
+    <title>Network ArtLab - Cloud Instance Testing</title>
+    <meta name="description" content="Artistic cloud instance testing and network debugging environment with real-time visualization" />
+    <meta name="author" content="Network ArtLab" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <meta property="og:title" content="Network ArtLab - Cloud Instance Testing" />
+    <meta property="og:description" content="Artistic cloud instance testing and network debugging environment" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
